# glich

./: .gitmodules  CMakeLists.txt  hics_quickstart.md  quickstart.md  readme.md
example/: html-format.glcs  is-leap-year.glcs  iso5.glcs  iso6.glcs  today-is.glcs
include/glc/: glc.h  glcDefs.h  glcGlich.h  glich.h  hic.h  hicDefs.h  hicGlich.h
lib/: make-hicslib.bat
lib/glich/: glcScripts.f2c  glc_builtin.glcs
lib/hics/: ay.glcs  chinese.glcs  easter.glcs  eh.glcs  french_rep.glcs  gregorian.glcs  hebrew.glcs  hicBuiltin.glcs  hicScripts.f2c  hic_builtin.glcs  hic_lib.glcs  islamic.glcs  jce.glcs  jdn.glcs  julian.glcs  julian_shift.glcs  liturgical.glcs  roc.glcs  week.glcs
src/glc/: CMakeLists.txt  glc.cpp  glcBlob.cpp  glcBlob.h  glcFile.cpp  glcFile.h  glcFilesys.cpp  glcFilesys.h  glcFunction.cpp  glcFunction.h  glcGlich.cpp  glcHelper.cpp  glcHelper.h  glcLibScripts.cpp  glcMark.cpp  glcMark.h  glcMath.cpp  glcMath.h  glcObject.cpp  glcObject.h  glcScript.cpp  glcScript.h  glcStore.cpp  glcStore.h  glcTokenStream.cpp  glcTokenStream.h  glcValue.cpp  glcValue.h  glcVersion.cpp  glcVersion.h  glich.cpp  hicBase.cpp  hicBase.h  hicChinese.cpp  hicChinese.h  hicDatePhrase.cpp  hicEaster.cpp  hicEaster.h  hicElement.cpp  hicElement.h  (+41 more)
src/glcs/: CMakeLists.txt  glcs.cpp
src/glich/: CMakeLists.txt  glich.cpp
src/hic/: CMakeLists.txt  hic.cpp  hicAstro.cpp  hicAtFunction.cpp  hicAtFunction.h  hicBase.cpp  hicBase.h  hicCalendars.h  hicChinese.cpp  hicChinese.h  hicDatePhrase.cpp  hicEaster.cpp  hicEaster.h  hicElement.cpp  hicElement.h  hicFormat.cpp  hicFormat.h  hicFormatIso.cpp  hicFormatIso.h  hicFormatText.cpp  hicFormatText.h  hicFormatUnit.h  hicFrench.h  hicGlich.cpp  hicGrammar.cpp  hicGrammar.h  hicGregorian.cpp  hicGregorian.h  hicHebrew.cpp  hicHebrew.h  hicHelper.h  hicHybrid.cpp  hicHybrid.h  hicIslamic.cpp  hicIslamic.h  hicIsoOrdinal.h  hicIsoWeek.cpp  hicIsoWeek.h  hicJdn.cpp  hicJdn.h  (+18 more)
test/: runAllD.bat  runAllR.bat  runUnitD.bat  runUnitR.bat
test/glcscripts/: runtest-D.bat  runtest-R.bat
test/glcscripts/suite/: test_module001.glcs  test_module002.glcs  test_module003.glcs  test_module004.glcs  test_module005.glcs
test/glcscripts/suite/glich/blobs/: blob001.glcs  blob002.glcs
test/glcscripts/suite/glich/bugs/: bug001.glcs
test/glcscripts/suite/glich/examples/: object-def-01.glcs  object-function-equal-01.glcs
test/glcscripts/suite/glich/objects/: object001.glcs  object002.glcs  object003.glcs  object004.glcs  object005.glcs  object006.glcs  object007.glcs  object008.glcs  object009.glcs  object010.glcs  object011.glcs  object012.glcs  object013.glcs  object014.glcs  object015.glcs  object016.glcs  object017.glcs  object018.glcs  object019.glcs  object020.glcs  object021.glcs  object022.glcs  object023.glcs  object024.glcs  object025.glcs  object026.glcs  object027.glcs
test/glcscripts/suite/hics-lib/bugs/: bug001.glcs
test/glcscripts/suite/hics-lib/example/: html-format-01.glcs  is-leap-year-01.glcs  iso5-01.glcs  iso6-01.glcs  today-is-01.glcs
test/glcscripts/suite/hics-lib/format/: format001.glcs  format003.glcs  format004.glcs  format005.glcs  format006.glcs
test/glcscripts/suite/hics-lib/functions/: function001.glcs  function002.glcs  function003.glcs  function013.glcs
test/glcscripts/suite/hics-lib/pseudo/: pseudo-h-001.glcs
test/glcscripts/suite/hics-lib/sch-fun/: sch-fun001.glcs  sch-normal001.glcs
test/glcscripts/suite/hics-lib/schemes/: ay-001.glcs  ay-002.glcs  ay-003.glcs  c-001.glcs  c-002.glcs  c-003.glcs  c-004.glcs  c-005.glcs  eh-001.glcs  fr-001.glcs  fr-002.glcs  fr-003.glcs  fr-004.glcs  g-002.glcs  glit-001.glcs  go-001.glcs  gw-001.glcs  h-001.glcs  h-002.glcs  i-001.glcs  i-002.glcs  i-003.glcs  i-004.glcs  if-001.glcs  if-002.glcs  ims-001.glcs  ims-002.glcs  j-001.glcs  j-002.glcs  ja-001.glcs  ja-002.glcs  jap-001.glcs  jap-002.glcs  jce-001.glcs  jce-002.glcs  jce-003.glcs  jce-004.glcs  jce-005.glcs  jdn-001.glcs  je-001.glcs  (+15 more)
test/glcscripts/suite/hics/format/: format001.glcs  format002.glcs  format003.glcs  format004.glcs  format005.glcs  format006.glcs  format007.glcs  format008.glcs  format009.glcs  format010.glcs  format011.glcs
test/glcscripts/suite/hics/functions/: at-fmt-object001.glcs  at-sch-object001.glcs  at-string001.glc  function001.glcs
test/glcscripts/suite/hics/grammar/: grammar001.glcs  grammar002.glcs  grammar003.glcs  grammar004.glcs  grammar005.glcs
test/glcscripts/suite/hics/module/: grammar001.glcs  lexicon001.glcs  scheme001.glcs
test/glcscripts/suite/hics/schemes/: ay-01.glcs  ay-02.glcs  c-01.glcs  c-02.glcs  c-03.glcs  c-04.glcs  c-05.glcs  c-06.glcs  cg-01.glcs  cg-02.glcs  eh-01.glcs  fr-01.glcs  fr-02.glcs  fr-03.glcs  fr-04.glcs  fr-05.glcs  g-01.glcs  g-02.glcs  g-03.glcs  glit-01.glcs  glit-02.glcs  go-01.glcs  go-02.glcs  gw-01.glcs  gw-02.glcs  h-01.glcs  h-02.glcs  (+37 more)
test/glcsoak/: CMakeLists.txt  gsMain.cpp  gsMain.h  gsSch_c.cpp  gsSch_g.cpp  gsSch_j.cpp  gsSch_ja.cpp
test/glctest/: CMakeLists.txt  glcsGetfns.cpp  glcsTest.cpp  glcsTestmain.h
test/glcunit/: CMakeLists.txt  guAPI.cpp  guAPI_phrase.cpp  guMain.cpp  guMain.h  guSch_ay.cpp  guSch_c.cpp  guSch_g.cpp  guSch_h.cpp  guSch_j.cpp  guSch_ja.cpp  guSch_jlit.cpp
website/: map.htm
website/dev/: index.htm
website/dev/lib/: index.htm
website/dev/man/defs/: ay.htm  c.htm  eh.htm  fr.htm  g.htm  glit.htm  go.htm  gw.htm  h.htm  i.htm  if.htm  ims.htm  index.htm  j.htm  ja.htm  jap.htm  jce.htm  jdn.htm  je.htm  jlit.htm  jn.htm  jwn.htm  jwsn.htm  mjd.htm  rd.htm  roc.htm
website/dev/man/hics/: bi-functions.htm  bi-objects.htm  format.htm  grammar.htm  index.htm  lexicon.htm  module.htm  phrase.htm  scheme.htm  set.htm
website/dev/man/script/: bi-commands.htm  bi-constants.htm  bi-functions.htm  bi-objects.htm  do.htm  ebnf.htm  expr.htm  file.htm  if.htm  index.htm  object.htm  set.htm  types.htm  write.htm
website/dev/man/tut/: index.htm
webutil/: layout.json  manual-0-3-0.json
webutil/images/: complement.dia  inter.dia  rel-comp.dia  sym-dif.dia  union.dia  well-ordered.dia
(+277 files in other folders)
